Avoid text wrap in the title

--- a/examples/demo/src/components/webshap/WebShap.scss
+++ b/examples/demo/src/components/webshap/WebShap.scss
@@ -20,7 +20,7 @@
 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   height: 100%;
   max-height: 950px;
@@ -32,7 +32,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  // justify-content: center;
   align-items: flex-end;
   padding: 0 10px 8px 10px;
   user-select: none;
@@ -40,6 +39,10 @@
 
   color: white;
   line-height: 1;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   .title-left {
     display: flex;
